# monopoly-ai

./: .gitignore  Cargo.toml  README.md
board/: Cargo.toml
board/src/: generator.rs  main.rs  menu.rs  message.rs  render.rs  server.rs  state.rs
player/computer/: Cargo.toml
player/computer/models/: Bot1.npz  Bot2.npz  Bot3.npz  Bot4.npz
player/computer/src/: main.rs  model.rs
player/human/: Cargo.toml  index.html
player/human/src/: control.rs  main.rs
src/: action.rs  main.rs  menu.rs  player.rs  rolling.rs  setup.rs  tile.rs
store/: Cargo.toml
store/src/: lib.rs  player.rs  tile.rs  transfer.rs
