[package]
name = "monopoly-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.1", features = ["bevy_sprite", "dynamic"] } # Base Bevy game engine
bevy-inspector-egui = "0.13" # Bevy debug GUI for placement and value meddling
# Eventually import Tensorflow rust bindings so we can load our model
