[package]
name = "monai_board"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10" }
bevy-inspector-egui = { version = "0.18" }
bevy_egui = { version = "0.20" }
naia-bevy-server = { version = "0.20", features = ["transport_webrtc"] }
naia-bevy-shared = { version = "0.20" }
monai_store = { path = "../store" }