[package]
name = "monai_human"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9" }
bevy-inspector-egui = { version = "0.17" }
naia-bevy-client = { version = "0.16" }
monai_store = { path = "../../store" }